--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -55,6 +55,20 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.6</version>
             </plugin>
+	<plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.10</version>
+        <configuration>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <connectors>
+            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+              <port>8080</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+          </connectors>
+        </configuration>
+	</plugin>
         </plugins>
     </reporting>
 </project>
